# SFML-Game

./: .gitignore  Animation.cpp  Animation.h  AnimationManager.cpp  AnimationManager.h  Animation_Manager.cpp  Animation_Manager.h  CMakeLists.txt  Default.xml  Game.cpp  Game.h  GameObject.cpp  GameObject.h  GameState.cpp  GameState.h  Game_Object.cpp  Game_Object.h  MenuState.cpp  MenuState.h  MovableObject.cpp  MovableObject.h  Movable_Object.cpp  Movable_Object.h  Object_type.cpp  Object_type.h  Obstacle.cpp  Obstacle.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h  README.md  Random.cpp  Random.h  State.cpp  State.h  TextureManager.cpp  TextureManager.h  Texture_Manager.cpp  Wave.cpp  (+8 more)
designspecifikation/: TDP005-mall.tex  designspecifikation.tex  uml.drawio
docs/designspecifikation/: designspecifikation.aux  designspecifikation.fdb_latexmk  designspecifikation.fls  designspecifikation.out  designspecifikation.tex  designspecifikation.xdv
docs/gruppkontrakt/: gruppkontrakt.fdb_latexmk  gruppkontrakt.fls  gruppkontrakt.xdv
docs/kodgranskning/: kodgranskning.aux  kodgranskning.fdb_latexmk  kodgranskning.fls  kodgranskning.out  kodgranskning.tex  kodgranskning.xdv
docs/kravspecifikation/: TDP005-mall.aux  TDP005-mall.fdb_latexmk  TDP005-mall.fls  TDP005-mall.out  TDP005-mall.tex  TDP005-mall.xdv
enemies/: Enemy.cpp  Enemy.h  Ranged_Enemy.cpp  Ranged_Enemy.h  SlowEnemy.cpp  SlowEnemy.h  Slow_Enemy.cpp  Slow_Enemy.h
entities/: Game_Object.cpp  Game_Object.h  Movable_Object.cpp  Movable_Object.h  Obstacle.cpp  Obstacle.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h
entities/enemies/: Enemy.cpp  Enemy.h  Ranged_Enemy.cpp  Ranged_Enemy.h  Slow_Enemy.cpp  Slow_Enemy.h
gruppkontrakt/: gruppkontrakt.tex  mall.cls
html/: annotated.html  classes.html  dir_000008_000027.html  dir_000059_000027.html  dir_000074_000027.html  dir_00bf7ea0689711c07b8fe3eabdfaa20c.html  dir_00bf7ea0689711c07b8fe3eabdfaa20c_dep.map  dir_00bf7ea0689711c07b8fe3eabdfaa20c_dep.md5  dir_02876a4e1ad0453eda0757d1f4216d04.html  dir_02876a4e1ad0453eda0757d1f4216d04_dep.map  dir_02876a4e1ad0453eda0757d1f4216d04_dep.md5  dir_0ae4765ea9291fb950dea13d9ce19f8f.html  dir_0ae4765ea9291fb950dea13d9ce19f8f_dep.map  dir_0ae4765ea9291fb950dea13d9ce19f8f_dep.md5  dir_0cb9e792a43acec489934064ed0def16.html  dir_0cb9e792a43acec489934064ed0def16_dep.map  dir_0cb9e792a43acec489934064ed0def16_dep.md5  dir_0e2977114cab80063f7ea372e67e1e43.html  dir_0e2977114cab80063f7ea372e67e1e43_dep.map  dir_0e2977114cab80063f7ea372e67e1e43_dep.md5  dir_0e3f881f354dc0b733f18d7dd667e284.html  dir_0e3f881f354dc0b733f18d7dd667e284_dep.map  dir_0e3f881f354dc0b733f18d7dd667e284_dep.md5  dir_0ffbd3f671f0bc96cf361d203ccc5ca4.html  dir_0ffbd3f671f0bc96cf361d203ccc5ca4_dep.map  dir_0ffbd3f671f0bc96cf361d203ccc5ca4_dep.md5  dir_122ab628624e810048be3fdff2fe1471.html  dir_122ab628624e810048be3fdff2fe1471_dep.map  dir_128f75dce35ba73c52fc2f45d15b5117.html  dir_152fa74090fa869da3a05feb137daa1f.html  dir_152fa74090fa869da3a05feb137daa1f_dep.map  dir_152fa74090fa869da3a05feb137daa1f_dep.md5  dir_1819d8d13cb2baf23809c08d3e8908ac.html  dir_1819d8d13cb2baf23809c08d3e8908ac_dep.map  dir_1819d8d13cb2baf23809c08d3e8908ac_dep.md5  dir_1d7fc809b69422c69587b7bcd0e6ed59.html  dir_1d7fc809b69422c69587b7bcd0e6ed59_dep.map  dir_1d7fc809b69422c69587b7bcd0e6ed59_dep.md5  dir_202a54d38c20ed0f6dd141bede9be432.html  dir_202a54d38c20ed0f6dd141bede9be432_dep.map  (+1871 more)
html/d0/d02/: structVkExtent3D.html
html/d0/d03/: structVkFormatProperties2__coll__graph.map
html/d0/d04/: classAnimation__Manager_1_1Animation__coll__graph.map  classAnimation__Manager_1_1Animation__coll__graph.md5
html/d0/d06/: ftadvanc_8h_source.html
html/d0/d07/: structVkImageFormatProperties2__coll__graph.map  structVkImageFormatProperties2__coll__graph.md5
html/d0/d0a/: classCatch_1_1ScopedMessage.html  classsf_1_1priv_1_1SoundFileReaderFlac-members.html  format_8h_source.html
html/d0/d0b/: structFT__Outline__Funcs____coll__graph.map  structFT__Outline__Funcs____coll__graph.md5
html/d0/d0d/: structVkDisplayProperties2KHR__coll__graph.map  structVkRenderPassMultiviewCreateInfo.html
html/d0/d0f/: classsf_1_1Http_1_1Request__coll__graph.map
html/d0/d10/: classCatch_1_1MatchExpression__coll__graph.map  classCatch_1_1MatchExpression__coll__graph.md5
html/d0/d13/: structVkDescriptorPoolSize-members.html  structVkImportSemaphoreWin32HandleInfoKHR__coll__graph.map  structVkImportSemaphoreWin32HandleInfoKHR__coll__graph.md5  structmp3dec__t__coll__graph.map
html/d0/d16/: structCatch_1_1Matchers_1_1StdString_1_1EqualsMatcher__inherit__graph.map  structCatch_1_1Matchers_1_1StdString_1_1EqualsMatcher__inherit__graph.md5
html/d0/d17/: structTT__Header__.html
html/d0/d18/: classsf_1_1Mouse.html
html/d0/d1a/: structDICONSTANTFORCE__coll__graph.map  (+1 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  (+127 more)
kravspecifikation/: TDP005-mall.tex
latex/: annotated.tex  files.tex  hierarchy.tex  index.tex  refman.tex
states/: GameOverState.cpp  GameOverState.h  GameState.cpp  GameState.h  Game_Over_State.cpp  Game_Over_State.h  Game_State.cpp  Game_State.h  MenuState.cpp  MenuState.h  Menu_State.cpp  Menu_State.h  State.cpp  State.h
utility/: Animation_Manager.cpp  Animation_Manager.h  Random.cpp  Random.h  Texture_Manager.cpp  Texture_Manager.h  common.h
(+5313 files in other folders)
